sostituito  add e remove con addFirst e removeFirst